@@ -1,6 +1,11 @@
 propellor (3.4.2) UNRELEASED; urgency=medium
 
   * Added Apache.confEnabled.
+  * Makefile: Removed "run" target which was default target.
+    "make" now only builds propellor, does not run it.
+    Note that propellor 1.0.0 and earlier relied on this target for
+    the Cron.runPropellor property's cronjob to work, so upgrading
+    directly to this version from 1.0.0 would break that cron job.
 
  -- Joey Hess <id@joeyh.name>  Wed, 08 Mar 2017 14:02:10 -0400
 
